Создано с помощью Colaboratory

--- a/Kaggle_JPX_Competition/JPX_train_v1.ipynb
+++ b/Kaggle_JPX_Competition/JPX_train_v1.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "private_outputs": true,
       "mount_file_id": "1nXEscnpxsxz91VUAm90uRDc0nfcWk4ps",
-      "authorship_tag": "ABX9TyMEeNUO2sWqA70IEnyGLYhY"
+      "authorship_tag": "ABX9TyObHTQ31cUMfVorYt2cjckg"
     },
     "kernelspec": {
       "name": "python3",
@@ -35,7 +35,10 @@
         "from google.colab import drive\n",
         "\n",
         "pd.set_option('display.max_columns', 1000)\n",
-        "pd.set_option('display.max_rows', 1000)"
+        "pd.set_option('display.max_rows', 1000)\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\") # `do not disturbe` mode"
       ]
     },
     {
@@ -197,7 +200,8 @@
       "cell_type": "markdown",
       "source": [
         "Бумаги не торговались в эти даты.\n",
-        "Не буду ни на что заменять пропущенные значения, просто дропну их"
+        "Не буду ни на что заменять пропущенные значения, просто дропну их / \n",
+        "Оказалось, это плохая идея, заменю пропуски предыдущими значениями по каждой бумаге в отдельности"
       ],
       "metadata": {
         "id": "GaZDgq2TAfvW"
@@ -206,7 +210,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_prices.dropna(subset=[\"Open\",\"High\",\"Low\",\"Close\"], inplace=True)"
+        "#df_stock_prices.dropna(subset=[\"Open\",\"High\",\"Low\",\"Close\"], inplace=True)"
       ],
       "metadata": {
         "id": "44ueZRe76qbg"
@@ -217,10 +221,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_prices['ExpectedDividend'].fillna(0, inplace=True)"
+        "df_stock_prices[[\"SecuritiesCode\", \"Open\",\"High\",\"Low\",\"Close\"]][df_stock_prices['SecuritiesCode'] == 1301]"
       ],
       "metadata": {
-        "id": "iYJ0DSVxprC1"
+        "id": "-abwk40okr-8"
       },
       "execution_count": null,
       "outputs": []
@@ -228,10 +232,10 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_prices.head()"
+        "df_stock_prices = df_stock_prices.sort_values(by=\"Date\", ascending=False)"
       ],
       "metadata": {
-        "id": "Yfpk5ZZAqJVT"
+        "id": "FxHt020rlyrV"
       },
       "execution_count": null,
       "outputs": []
@@ -240,14 +244,24 @@
       "cell_type": "code",
       "source": [
         "def stock_prices_prep(data):\n",
-        "  #data[\"Date\"] = pd.to_datetime(data[\"Date\"])\n",
-        "  # for col in [\"Open\",\"High\",\"Low\",\"Close\", \"ExpectedDividend\"]:\n",
-        "  #   data[col] = data[col].fillna(0)\n",
+        "    df = pd.DataFrame()\n",
+        "    df_temp = pd.DataFrame()\n",
+        "    for code in data['SecuritiesCode'].unique():\n",
+        "        df_temp = data[data['SecuritiesCode'] == code].sort_values(by=\"Date\",  ascending=False)\n",
         "\n",
-        "  data[\"Adj_Close\"]=data[\"Close\"] * data[\"AdjustmentFactor\"]\n",
+        "        df_temp[[\"High\", \"Low\", \"Close\", \"Open\"]] = df_temp[[\"High\", \"Low\", \"Close\", \"Open\"]].fillna(method=\"bfill\")\n",
+        "        df_temp[[\"High\", \"Low\", \"Close\", \"Open\"]] = df_temp[[\"High\", \"Low\", \"Close\", \"Open\"]].fillna(0)\n",
+        "        \n",
+        "        df = df.append(df_temp)\n",
+        "\n",
+        "    data = df.sort_values(by=\"Date\")\n",
+        "\n",
+        "\n",
+        "    data[\"Adj_Close\"] = data[\"Close\"] * data[\"AdjustmentFactor\"]\n",
+        "    data['ExpectedDividend'].fillna(0, inplace=True)\n",
         "  # data.drop(\"AdjustmentFactor\", axis=1, inplace=True)\n",
         "\n",
-        "  return data"
+        "    return data"
       ],
       "metadata": {
         "id": "L-TPOmUB1sSf"
@@ -258,10 +272,21 @@
     {
       "cell_type": "code",
       "source": [
-        "stock_prices_prep(df_stock_prices)"
+        "df_stock_prices = stock_prices_prep(df_stock_prices)"
       ],
       "metadata": {
         "id": "TlqHkx1biLZI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_stock_prices[df_stock_prices['Close'].isna()]"
+      ],
+      "metadata": {
+        "id": "ZH351H185rbB"
       },
       "execution_count": null,
       "outputs": []
@@ -295,17 +320,6 @@
       ],
       "metadata": {
         "id": "FufAPVdtFC-W"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "07bNwAG-FCsT"
       },
       "execution_count": null,
       "outputs": []
@@ -384,6 +398,7 @@
       "source": [
         "df_stock_1813 = df_stock_prices[df_stock_prices[\"SecuritiesCode\"] == 1813]\n",
         "df_stock_1879 = df_stock_prices[df_stock_prices[\"SecuritiesCode\"] == 1879]\n",
+        "df_stock_3540 = df_stock_prices[df_stock_prices[\"SecuritiesCode\"] == 3540]\n",
         "df_stock_1813.head()"
       ],
       "metadata": {
@@ -397,10 +412,36 @@
       "source": [
         "df_stock_1813.set_index('Date', inplace=True)\n",
         "df_stock_1879.set_index('Date', inplace=True)\n",
+        "df_stock_3540.set_index('Date', inplace=True)\n",
         "df_stock_1879.head()"
       ],
       "metadata": {
         "id": "-_Zpw3Pm8c7R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def stock_by_SecuritiesCode(data, code):\n",
+        "    df = data[data['SecuritiesCode'] == code]\n",
+        "    df.set_index('Date', inplace=True)\n",
+        "    return df"
+      ],
+      "metadata": {
+        "id": "qQxzGilINcCo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stock_by_SecuritiesCode(df_stock_prices, 1813)\n"
+      ],
+      "metadata": {
+        "id": "wVtLPGwHNdOU"
       },
       "execution_count": null,
       "outputs": []
@@ -507,7 +548,7 @@
     {
       "cell_type": "code",
       "source": [
-        "moving_average(df_stock_1879[\"Adj_Close\"], 24)"
+        "moving_average(stock_by_SecuritiesCode(df_stock_prices, 1879)[\"Adj_Close\"], 24)"
       ],
       "metadata": {
         "id": "qd65O_aIF340"
@@ -518,34 +559,46 @@
     {
       "cell_type": "code",
       "source": [
-        "fig = make_subplots(rows=2, cols=1)\n",
-        "fig.add_trace(go.Scatter(x=df_stock_1813.index, \n",
-        "                         y=df_stock_1813[\"Adj_Close\"], \n",
-        "                         name='SecuritiesCode=1813',\n",
+        "def plot_price_volume(data, code):\n",
+        "    df_ploted = stock_by_SecuritiesCode(data, code)\n",
+        "    fig = make_subplots(rows=2, cols=1, shared_xaxes=True, vertical_spacing=0.02, row_heights=[400, 200])\n",
+        "    fig.add_trace(go.Scatter(x=df_ploted.index, \n",
+        "                         y=df_ploted[\"Adj_Close\"], \n",
+        "                         name=f'SecuritiesCode={code}',\n",
         "                         mode='lines+markers',\n",
-        "                         marker=dict(color=df_stock_1813[\"Is_outlier\"], colorscale='Inferno')),\n",
+        "                         marker=dict(color=df_ploted[\"Is_outlier\"], colorscale='Inferno')),\n",
         "                         1, 1)\n",
-        "fig.add_trace(go.Scatter(x=df_stock_1879.index, \n",
-        "                         y=df_stock_1879[\"Adj_Close\"], \n",
-        "                         name='SecuritiesCode=1879',\n",
-        "                         mode='lines+markers',\n",
-        "                         marker=dict(color=df_stock_1879[\"Is_outlier\"], colorscale='Inferno')),\n",
+        "    fig.add_trace(go.Bar(x=df_ploted.index, \n",
+        "                         y=df_ploted[\"Volume\"], \n",
+        "                         name=f'SecuritiesCode={code}'),\n",
         "                         2, 1)\n",
-        "fig.update_yaxes(zeroline=True, zerolinewidth=2, zerolinecolor='LightPink')\n",
-        "fig.update_xaxes(zeroline=True, zerolinewidth=2, zerolinecolor='#008000')\n",
-        "fig.update_layout(legend_orientation=\"h\",\n",
+        "    fig.update_yaxes(zeroline=True, zerolinewidth=2, zerolinecolor='LightPink')\n",
+        "    fig.update_xaxes(zeroline=True, zerolinewidth=2, zerolinecolor='#008000')\n",
+        "    fig.update_layout(legend_orientation=\"h\",\n",
         "                  margin=dict(l=0, r=0, t=30, b=0),\n",
         "                  title=\"Stock prices\",\n",
         "                  hovermode=\"x\")\n",
-        "fig.update_traces(hoverinfo=\"all\", hovertemplate=\"Date: %{x}<br>Adj Close Price: %{y}\")\n",
-        "fig.update_yaxes(title=\"Adj Close Price\", col=1, row=1)\n",
-        "fig.update_yaxes(title=\"Adj Close Price\", col=1, row=2)\n",
-        "fig.update_xaxes(title=\"Date\", col=1, row=2)\n",
+        "    fig.update_traces(hoverinfo=\"all\", hovertemplate=\"Date: %{x}<br>Adj Adjusted Close Price: %{y}\", col=1, row=1)\n",
+        "    fig.update_traces(hoverinfo=\"all\", hovertemplate=\"Date: %{x}<br>Volume: %{y}\", col=1, row=2)\n",
+        "    fig.update_yaxes(title=\"Adj Close Price\", col=1, row=1)\n",
+        "    fig.update_yaxes(title=\"Volume\", col=1, row=2)\n",
+        "    fig.update_xaxes(title=\"Date\", col=1, row=2)\n",
         "\n",
-        "fig.show()"
+        "    fig.show()"
       ],
       "metadata": {
-        "id": "-p4QVqbnF30q"
+        "id": "qAX4bQdAPd6J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plot_price_volume(df_stock_prices, 3540)"
+      ],
+      "metadata": {
+        "id": "HU-QxyaJQXgT"
       },
       "execution_count": null,
       "outputs": []
@@ -636,17 +689,6 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_1813[\"Day_change_pct\"].to_frame().info()"
-      ],
-      "metadata": {
-        "id": "GlbRm3ZT0mU0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "df = df_stock_1813\n",
         "df.info()"
       ],
@@ -659,7 +701,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "В 'Day_change_pct' нет пустых значений, тк мы дропнули выше строки с пустыми значениями в столбцах Open\tHigh\tLow\tClose"
+        "В 'Day_change_pct' нет пустых значений, тк мы дропнули выше строки с пустыми значениями в столбцах Open\tHigh\tLow\tClose / значения не удалены, а заменены"
       ],
       "metadata": {
         "id": "xbxfiaFk_YF_"
@@ -668,19 +710,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from pandas.core.dtypes.missing import isna\n",
-        "df[df['Day_change_pct'].isna()]"
-      ],
-      "metadata": {
-        "id": "LaANIXNL1h7v"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plotMovingAverage(df_stock_1813[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
+        "# plotMovingAverage(df_stock_1813[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)\n",
+        "# stock_by_SecuritiesCode(df_stock_prices, 1813)\n",
+        "plotMovingAverage(stock_by_SecuritiesCode(df_stock_prices, 1813)[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
       ],
       "metadata": {
         "id": "8Pr-bMQKF3uK"
@@ -691,13 +723,22 @@
     {
       "cell_type": "code",
       "source": [
-        "plotMovingAverage(df_stock_1813[\"Day_change_pct\"], 15, plot_intervals=True, plot_anomalies=True)"
+        "plotMovingAverage(stock_by_SecuritiesCode(df_stock_prices, 1813)[\"Day_change_pct\"], 30, plot_intervals=True, plot_anomalies=True)"
       ],
       "metadata": {
         "id": "gGktxmr-F3nJ"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Посмотрим на разброс значений в \"AdjustmentFactor\""
+      ],
+      "metadata": {
+        "id": "ez-5oxWwVv7m"
+      }
     },
     {
       "cell_type": "code",
@@ -786,9 +827,9 @@
       "cell_type": "code",
       "source": [
         "fig = go.Figure()\n",
-        "fig.add_trace(go.Scatter(x=df_stock_prices[\"Date\"][df_stock_prices[\"SecuritiesCode\"] == 7638], \n",
-        "                         y=df_stock_prices[\"Volume\"][df_stock_prices[\"SecuritiesCode\"] == 7638],\n",
-        "                         name='SecuritiesCode=1813',\n",
+        "fig.add_trace(go.Scatter(x=stock_by_SecuritiesCode(df_stock_prices, 7638).index, \n",
+        "                         y=stock_by_SecuritiesCode(df_stock_prices, 7638)[\"Volume\"],\n",
+        "                         name='SecuritiesCode=7638',\n",
         "                         mode='lines+markers'))\n",
         "\n",
         "fig.update_yaxes(zeroline=True, zerolinewidth=2, zerolinecolor='LightPink')\n",
@@ -801,7 +842,7 @@
         "fig.show()"
       ],
       "metadata": {
-        "id": "MgqW7bbYMG3y"
+        "id": "vGlNgsOWXNzX"
       },
       "execution_count": null,
       "outputs": []
@@ -818,7 +859,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_prices[df_stock_prices[\"SecuritiesCode\"] == 7638].tail(10)"
+        "stock_by_SecuritiesCode(df_stock_prices, 7638).tail(10)"
       ],
       "metadata": {
         "id": "AL_jbCYVAiL2"
@@ -861,11 +902,19 @@
     {
       "cell_type": "code",
       "source": [
-        "def calc_main_adjusting_factor(sorted_data, sec_list):\n",
-        "    for code in sorted_data[sec_list].unique():\n",
-        "          sorted_data['Adj'][sorted_data[sec_list] == code] = sorted_data['AdjustmentFactor'][sorted_data[sec_list] == code].cumprod()\n",
+        "def calc_main_adjusting_factor(sorted_data):\n",
+        "    df = pd.DataFrame()\n",
+        "    df_temp = pd.DataFrame()\n",
+        "    for code in sorted_data['SecuritiesCode'].unique():\n",
+        "        df_temp = sorted_data[sorted_data['SecuritiesCode'] == code]\n",
         "\n",
-        "    return sorted_data\n",
+        "        df_temp['Adj'] = df_temp['AdjustmentFactor'].cumprod()\n",
+        "\n",
+        "        df = df.append(df_temp)\n",
+        "\n",
+        "    df = df.sort_values(by='Date', ascending=False)\n",
+        "\n",
+        "    return df\n",
         "\n",
         "\n"
       ],
@@ -878,7 +927,7 @@
     {
       "cell_type": "code",
       "source": [
-        "calc_main_adjusting_factor(df_stock_prices, \"SecuritiesCode\")"
+        "df_stock_prices = calc_main_adjusting_factor(df_stock_prices)"
       ],
       "metadata": {
         "id": "cY5SwoKsQPKc"
@@ -953,8 +1002,8 @@
       "cell_type": "code",
       "source": [
         "fig = go.Figure()\n",
-        "fig.add_trace(go.Scatter(x=df_stock_prices[\"Date\"][df_stock_prices[\"SecuritiesCode\"] == 7638], \n",
-        "                         y=df_stock_prices[\"Volume_Adj\"][df_stock_prices[\"SecuritiesCode\"] == 7638],\n",
+        "fig.add_trace(go.Scatter(x=stock_by_SecuritiesCode(df_stock_prices, 7638).index, \n",
+        "                         y=stock_by_SecuritiesCode(df_stock_prices, 7638)[\"Volume_Adj\"],\n",
         "                         name='SecuritiesCode=1813',\n",
         "                         mode='lines+markers'))\n",
         "\n",
@@ -1024,7 +1073,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plotMovingAverage(df_stock_7638[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
+        "plotMovingAverage(stock_by_SecuritiesCode(df_stock_prices, 7638)[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
       ],
       "metadata": {
         "id": "atVOFrQNWw3y"
@@ -1035,7 +1084,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plotMovingAverage(df_stock_1813[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
+        "plotMovingAverage(stock_by_SecuritiesCode(df_stock_prices, 1813)[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
       ],
       "metadata": {
         "id": "27Qk13QxXm7z"
@@ -1046,7 +1095,7 @@
     {
       "cell_type": "code",
       "source": [
-        "plotMovingAverage(df_stock_1879[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
+        "plotMovingAverage(stock_by_SecuritiesCode(df_stock_prices, 1879)[\"Adj_Close\"], 30, plot_intervals=True, plot_anomalies=True)"
       ],
       "metadata": {
         "id": "FLgeJwCSVfZt"
@@ -1135,9 +1184,7 @@
         "          # датафрейм отсортирован по дате по убыванию\n",
         "          # находим ExpectedDividend > 0, запоминаем двд\n",
         "          # сдвигаемся на одну строку выше и берем цену Close. Рассчитываем коэф-т для корректировки, пишем коэф-т в столбец 'Adj_dvd' в той же строке. / делаем сдвиг столбца 'Close' вниз на 1 \n",
-        "          # \n",
-        "          # \n",
-        "          # \n",
+        "    \n",
         "\n",
         "\n",
         "\n",
@@ -1166,7 +1213,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "calc_dvd_adjusting_factor_test работает в 2 раза быстрее, чем calc_dvd_adjusting_factor"
+        "calc_dvd_adjusting_factor_v2 работает в 2 раза быстрее, чем calc_dvd_adjusting_factor_v1"
       ],
       "metadata": {
         "id": "g-DhnjCdYjAL"
@@ -1175,7 +1222,18 @@
     {
       "cell_type": "code",
       "source": [
-        "df_stock_prices_Adj"
+        "df_stock_prices_Adj['Adj_Close'] = df_stock_prices_Adj['Close'] * df_stock_prices_Adj['Adj'] * df_stock_prices_Adj['Adj_dvd_cum']"
+      ],
+      "metadata": {
+        "id": "_F7vYfCS_L41"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_stock_prices_Adj = df_stock_prices_Adj.sort_values(by='Date')"
       ],
       "metadata": {
         "id": "j_QudJHTkvoX"
@@ -1186,7 +1244,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "stock_by_SecuritiesCode(df_stock_prices_Adj, 9083).head(40)"
       ],
       "metadata": {
         "id": "gEQO7Z_vkvlh"
@@ -1201,72 +1259,6 @@
       ],
       "metadata": {
         "id": "3vhqKzwtkvd7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "D02T7xiTOBEl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "mlXLqte3OBBB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "FnnnrWpKOA99"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "RKqeFquWOA6t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "iwEULMP71TzZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "ZJ8DECr51Tpb"
       },
       "execution_count": null,
       "outputs": []
